Fix overflow in screen-lg

--- a/src/scss/objects/_menu-poker.scss
+++ b/src/scss/objects/_menu-poker.scss
@@ -22,6 +22,7 @@
 
   @include screen-sm{
     padding: $sm 0 0 0;
+    overflow-x: inherit;
   }
 
   &__wrapper {
@@ -36,10 +37,16 @@
     .menuPoker__btn {
       position: relative;
       padding: 0 $md;
-
       @include screen-lg {
         padding: 0 $lg;
+
       }
+
+    }
+    @include screen-lg {
+      overflow-x: inherit;
+      justify-content: center;
+
     }
   }
 
